# cpp-functional-patterns

./: CMakeLists.txt  README.md  collections.hpp  patterns.hpp
examples/: main.cpp
include/fp/: collections.hpp  patterns.hpp
test/: collectionsTest.cpp  main  patternsTest.cpp
